GNOME Bugzilla – Bug 781686
room: Fix infinite loop with unset nickname
Last modified: 2017-04-24 23:45:38 UTC
See patch. Reported by Michael on IRC.
Created attachment 350344 [details] [review] room: Fix infinite loop with unset nickname While an empty (self) nick is unexpected, it's apparently possible under some circumstances. Handle that case explicitly to avoid entering an infinite loop.
Attachment 350344 [details] pushed as cea385a - room: Fix infinite loop with unset nickname