room: Fix infinite loop with unset nickname

While an empty (self) nick is unexpected, it's apparently possible
under some circumstances. Handle that case explicitly to avoid
entering an infinite loop.

https://bugzilla.gnome.org/show_bug.cgi?id=781686